--- a/aboutMe.css
+++ b/aboutMe.css
@@ -108,7 +108,7 @@ main section {
 .navigator{
    display: flex;
    flex-direction: row;
-    picture img{
+    img{
         width: 35px;
         height: 35px;
         padding-top: 10px;
