--- a/main.css
+++ b/main.css
@@ -119,7 +119,7 @@ picture{
 .navigator{
    display: flex;
    flex-direction: row;
-    picture img{
+    img{
         width: 35px;
         height: 35px;
         padding-top: 10px;
