Fixed an html invalidation

--- a/resume.css
+++ b/resume.css
@@ -115,7 +115,7 @@ img{
 .navigator{
    display: flex;
    flex-direction: row;
-    picture img{
+    img{
         width: 35px;
         height: 35px;
         padding-top: 10px;
