--- a/form-no-js.css
+++ b/form-no-js.css
@@ -12,7 +12,7 @@
   --highlight-color: light-dark(hotpink, lime);
 }
 
-:root {
+:root{
   &:has(input[name="color-scheme"][value="light"]:checked) {
     color-scheme: light;
   }
@@ -93,8 +93,8 @@ main{
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 15px;
+    padding-bottom: 10px;
 }
 
 .form input{
@@ -108,6 +108,16 @@ main{
     padding-right: 10px;
 }
 
+.form input:invalid{
+    border: 2px solid lightcoral;
+}
+
+.form input:required:valid{
+    border: 2px solid lightgreen;
+}
+
+
+
 .form textarea{
     outline-color: lightgrey;
     font-family: 'Open Sans', Arial, sans-serif;
@@ -116,10 +126,27 @@ main{
     border: 0;
     border-radius: 20px;
     width: 30vw;
-    height: 20vh;
+    height: 15vh;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 10px;
+}
+
+.form p{
+    display: flex;
+    flex-direction: row-reverse;
+    font-size: x-small;
+    margin-block-start: 0;
+    margin-block-end: 0;
+
+}
+
+.form textarea:invalid{
+    border: 2px solid lightcoral;
+}
+
+.form textarea:valid{
+    border: 2px solid lightgreen;
 }
 
 .form button{
@@ -138,13 +165,13 @@ main{
 }
 
 .form output{
+    display: none;
     color: grey;
     padding-left: 10px;
     padding-right: 10px;
     border-radius: 20px;
     box-shadow: 0 0 0 3px 	#fffdaf;
 }
-
 
 
 
